WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308230
Null deref under RenderLayerBacking::updateOverflowControlsLayers()
https://bugs.webkit.org/show_bug.cgi?id=308230
Summary
Null deref under RenderLayerBacking::updateOverflowControlsLayers()
Simon Fraser (smfr)
Reported
2026-02-19 10:47:43 PST
We have reports of a null de-ref under RenderLayerBacking::updateOverflowControlsLayers(). <
rdar://150330340
>
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2026-02-19 10:59:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59013
EWS
Comment 2
2026-02-19 15:06:56 PST
Committed
307858@main
(142b64feb347): <
https://commits.webkit.org/307858@main
> Reviewed commits have been landed. Closing PR #59013 and removing active labels.
EWS
Comment 3
2026-02-23 22:20:02 PST
Committed
305413.342@safari-7624-branch
(98b6afe0c9f2): <
https://commits.webkit.org/305413.342@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4540 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug