Null deref under RenderLayerBacking::updateOverflowControlsLayers() https://bugs.webkit.org/show_bug.cgi?id=308230 rdar://150330340

Reviewed by Alan Baradlay.

Crash data suggest that we can hit a null de-ref under `m_owningLayer.page().scrollingCoordinator()()`
in `RenderLayerBacking::updateOverflowControlsLayers()` when tearing down the render tree.

Fix by avoid this call altogether. We know from the order in `~RenderLayer()` that
we've always cleared the scrollable area before clearing the backing, thus at teardown
this code will never hit `scrollableAreaScrollbarLayerDidChange()`. So add a simpler
`clearOverflowControlsLayers()` to be called from `~RenderLayerBacking()` that just
destroys the layers.

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::~RenderLayerBacking):
(WebCore::RenderLayerBacking::clearOverflowControlsLayers):
* Source/WebCore/rendering/RenderLayerBacking.h:

Canonical link: https://commits.webkit.org/307858@main